--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
               </svg>
               <div class="lines__inner">
                 <div class="hero__block">
-                  <h1 class="title">A great place to be</h1>
-                  <p class="text">Online shopping is the best way to buy <br>everything you need in two clicks.</p>
+                  <h1 class="title js_main-title"></h1>
+                  <p class="text js_sub-title"></p>
                   <a href="./shop.html" class="btn">go to cart</a>
                 </div>
                 <img src="./img/bg.jpeg" alt="" class="hero__img">
