--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <a href="./privacy.html" class="btn">read more</a>
                   </div>
                 </li>
-                <li class="policy__item">
+                <!-- <li class="policy__item">
                   <h3 class="policy__title">RETURN POLICY</h3>
                   <div class="policy__box">
                    
@@ -432,7 +432,7 @@
                       unlikely event of damaged, defective or different item delivered to you.</p>
                     <a href="./return.html" class="btn">read more</a>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
           </section>
