Shop.html changes 13.03.24

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <div class="hero__block">
                   <h1 class="title js_main-title"></h1>
                   <p class="text js_sub-title"></p>
-                  <a href="./shop.html" class="btn">go to cart</a>
+                  <a href="#products" class="btn">our products</a>
                 </div>
                 <img src="./img/bg.jpeg" alt="" class="hero__img">
               </div>
@@ -370,7 +370,7 @@
 
       <div class="products__wrapper hero-products">
         <div class="container">
-          <section class="products lines__section">
+          <section class="products lines__section" id="products">
             <ul class="lines__list">
               <li></li>
               <li></li>
